node-k8s-lens-poc/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
